--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,21 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --clr-white: #ffffff;
+  --clr-black: #171717;
+  --clr-primary: #07f49e;
+  --clr-secondary: #42047e;
+
+  --gradient-primary: linear-gradient(135deg, var(--clr-primary), var(--clr-secondary));
+
+
+  --font-primary: "DM Sans", sans-serif;
+  --font-secondary: "Poiret One", sans-serif;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  max-width: 1920px;
+  margin: 0 auto;
+  font-family: var(--font-primary);
+
 }
