--- a/src/app/components/Buttons/Button_border/buttonBorder.css
+++ b/src/app/components/Buttons/Button_border/buttonBorder.css
@@ -6,6 +6,7 @@
     
 }
 
+/* setup and positon the before element*/
 .btn-border::before {
     content: '';
     position: absolute;
@@ -13,17 +14,19 @@
     left: 0;
     height: 2px;
     width: 100%;
-    background: var(--clr-primary);
+    background: white;
     transform-origin: left;
     transform: scaleX(0);
     transition: transform 0.3s ease-in-out;
 }
 
+/* hover to start from left to right*/
 .btn-border:hover::before {
     transform: scaleX(1);
     transform-origin: left;
 }
 
+/* end teh hover to right*/
 .btn-border::before {
     transform-origin: right;
 }
