--- a/src/app/components/Banner/banner.css
+++ b/src/app/components/Banner/banner.css
@@ -3,7 +3,7 @@
   margin-top: 1rem;
   border-radius: 1rem;
   height: 25rem;
-  width: 80%;
+  max-width: 1000px;
   display: flex;
   align-items: center;
   justify-content: center;
