--- a/src/app/components/Buttons/Button_fill/buttonFill.css
+++ b/src/app/components/Buttons/Button_fill/buttonFill.css
@@ -1,5 +1,6 @@
 .button_container{
-    border: 2px solid black;
+    border: 2px solid gray;
+    border-radius: 0.5rem;
     color: black;
     position: relative;
     z-index:1999;
@@ -18,6 +19,7 @@
     content: '';
     z-index: -1;
     position: absolute;
+    border-radius: 0.4rem;
     top: 0px;
     bottom: 0px;
     left: 0px;
@@ -43,6 +45,7 @@
 
 .button_container_dark{
     border: 2px solid gray;
+    border-radius: 0.5rem;
     color: white;
     position: relative;
     z-index:1999;
@@ -60,6 +63,7 @@
     content: '';
     z-index: -1;
     position: absolute;
+    border-radius: 0.4rem;
     top: 0px;
     bottom: 0px;
     left: 0px;
