lottie animation added

--- a/src/app/components/MySkills/mySkills.css
+++ b/src/app/components/MySkills/mySkills.css
@@ -1,45 +1,33 @@
-.skills-container {
-  max-width: 1000px;
-  margin: 0 auto;
-  padding: 2rem;
-  border-radius: 1rem;
-  box-shadow: 0 0 10px var(--clr-primary);
-  background-image: var(--gradient-primary);
-}
-
-.skills-title {
-  font-size: 2rem;
-  font-weight: 700;
-  text-align: left;
-  margin-bottom: 2rem;
-}
-
 .skills-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+  display: flex;
+  flex-wrap: wrap;
+  /* grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); */
   gap: 1.5rem;
   justify-items: center;
 }
 
 .skill-card {
-  border-radius: 0.75rem;
-  width: 8rem;
-  padding: 1rem;
-  text-align: center;
+  border-radius: 0.3rem;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+  width: fit;
+  padding: 0.2rem 5px;
+  transition: 0.3 ease-in-out;
+}
+
+
+.skill-card:hover {
+  transform: translateY(-1px);
   box-shadow: 0 0 5px var(--clr-primary);
   background-image: var(--gradient-primary);
   transition: transform 0.2s ease, box-shadow 0.2s ease;
-  cursor: pointer;
-}
-
-.skill-card:hover {
-  transform: translateY(-6px);
-  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
 }
 
 .skill-icon {
-  font-size: 2rem;
-  margin-bottom: 0.5rem;
+  font-size: 1rem;
 }
 
 .react {
